# jqoiview

./: .gitignore  Cargo.toml  README.md  build.rs  jqoiview.desktop
src/: chunk.rs  decode.rs  lib.rs  main.rs  qoi.rs  x.rs
