[package]
name = "jqoiview"
description = "A simple QOI image format viewer"
repository = "https://github.com/Jasper-Ty/jqoiview/"
keywords = ["qoi", "image"]
license = "MIT"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35"
