[package]
name = "jqoiview"
description = "A simple QOI image format viewer"
repository = "https://github.com/Jasper-Ty/jqoiview/"
keywords = ["qoi", "image"]
license = "MIT"
version = "0.5.3"
edition = "2021"


[dependencies]
sdl2 = { version = "0.35", default-features = false, features = ["bundled"] }
